// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > cancelSlip > cancel slip 80mm (snapshot) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>CANCELLED
<1D><21><00>KOT #42
T1 / B
14:30
------------------------------------------------
<1B><45><01>1 x Biryani (Full)
<1B><45><00>Reason: Customer changed mind
<1B><64><03><1D><56><42><00>"
`;

exports[`templates > kotSlip > cancelled item on KOT (snapshot) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>KOT #46
<1D><21><00>T3
14:30
<1B><45><00>------------------------------------------------
<1B><61><00>1 x Soup
<1B><45><01>CANCELLED: 1 x Salad
<1B><45><00>------------------------------------------------
<1B><61><01>Kitchen
<1B><64><03><1D><56><42><00>"
`;

exports[`templates > kotSlip > dine-in split A 80mm (snapshot) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>KOT #42
<1D><21><00>T1
14:30
<1B><45><00>------------------------------------------------
<1B><61><00>2 x Biryani (Half)
1 x Paneer Tikka
  (Extra spicy)
------------------------------------------------
<1B><61><01>Kitchen
<1B><64><03><1D><56><42><00>"
`;

exports[`templates > kotSlip > dine-in split B 58mm (snapshot, asserts T1 / B and 32-char hr) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>KOT #43
<1D><21><00>T1 / B
14:30
<1B><45><00>--------------------------------
<1B><61><00>1 x Mojito
--------------------------------
<1B><61><01>Bar
<1B><64><03><1D><56><42><00>"
`;

exports[`templates > kotSlip > item with note (snapshot) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>KOT #45
<1D><21><00>T2
14:30
<1B><45><00>------------------------------------------------
<1B><61><00>1 x Pizza
  (No onions)
------------------------------------------------
<1B><61><01>Kitchen
<1B><64><03><1D><56><42><00>"
`;

exports[`templates > kotSlip > parcel (snapshot) 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><11>KOT #44
<1D><21><00>Parcel
14:30
<1B><45><00>------------------------------------------------
<1B><61><00>3 x Dosa
------------------------------------------------
<1B><61><01>Kitchen
<1B><64><03><1D><56><42><00>"
`;
